Refactor configurations to replace `getConfiguration`/`getField` method calls with concise property-style `configuration`/`field` naming, ensuring consistency and maintainability across services, factories, and models.